--- a/fempredict/src/index.css
+++ b/fempredict/src/index.css
@@ -161,6 +161,13 @@ footer p {
   overflow: hidden;     /* Hide overflow in case the image doesn't exactly match the aspect ratio */
 }
 
+.left-side img{
+  width: 100%;         
+  height: 100%;         
+  object-fit: cover;    
+  border-radius: 8px; 
+}
+
 .section-image img {
   width: 100%;          /* Make the image fill the full width of the container */
   height: 100%;         /* Make the image fill the full height of the container */
@@ -247,12 +254,17 @@ footer p {
 }
 
 .auth-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 300px;
-  margin: 0 auto;
   padding: 20px;
   border: 2px solid black;
   border-radius: 5px;
   background-color: #B9AEDC;
+  gap: 20px;  /* Add space between the sections */
+  margin-bottom: 40px;
+  margin-top: 40px;
 }
 
 .form-group {
@@ -269,49 +281,4 @@ input {
   padding: 8px;
   box-sizing: border-box;
   margin-top: 5px;
-}
-
-/* button {
-  width: 100%;
-  padding: 10px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  cursor: pointer;
-  margin-top: 10px;
-} */
-
-/* button:hover {
-  background-color: #45a049;
-} */
-
-p {
-  text-align: center;
-}
-
-/* button {
-  background-color: transparent;
-  color: #007bff;
-  border: none;
-  cursor: pointer;
-} */
-
-/* button:hover {
-  text-decoration: underline;
-} */
-
-.profile-container button {
-  padding: 10px 20px;
-  background-color: #5f9ea0; /* Soft teal or choose your brand color */
-  color: black;
-  border: 2px solid black;
-  border-radius: 5px;
-  cursor: pointer;
-  font-family: 'Poppins', sans-serif; 
-  font-weight: bolder;
-  font-size: 16px;
-}
-
-.section-text button:hover {
-  background-color: white; /* Darker teal for hover effect */
 }
