--- a/fempredict/src/index.css
+++ b/fempredict/src/index.css
@@ -249,17 +249,20 @@ footer p {
 }
 
 .profile-container {
-  text-align: center;
-  padding: 20px;
+  background-color: #B9AEDC;
+  background-position: center;
+  padding: 20px 40px 60px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  border-radius: 5px;
+
 }
 
 .auth-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 300px;
   padding: 20px;
-  border: 2px solid black;
   border-radius: 5px;
   background-color: #B9AEDC;
   gap: 20px;  /* Add space between the sections */
