--- a/fempredict/src/index.css
+++ b/fempredict/src/index.css
@@ -314,6 +314,7 @@ form .form-group {
 form label {
   display: block;
   margin-bottom: 5px;
+  text-align: left;
 }
 
 form input {
@@ -326,22 +327,21 @@ form input {
 form button {
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
-  color: white;
+  background-color: #b1a1ed;
+  color: black;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
 
-form button:hover {
-  background-color: #0056b3;
-}
 
 button {
   background: none;
   border: none;
-  color: #007bff;
+  color: #b1a1ed;
   cursor: pointer;
+  font-family: 'Poppins', sans-serif; 
+  font-size: 16px;
 }
 
 /* Style for Forgot Password link */
@@ -351,15 +351,9 @@ button {
 }
 
 .forgot-password a {
-  color: #007bff;
+  color: #b1a1ed;
   text-decoration: none;
 }
-
-.forgot-password a:hover {
-  text-decoration: underline;
-}
-
-
 
 .form-group {
   margin-bottom: 15px;
