--- a/fempredict/src/index.css
+++ b/fempredict/src/index.css
@@ -196,7 +196,7 @@ footer p {
 
 .section-text button {
   padding: 10px 20px;
-  background-color: #5f9ea0; /* Soft teal or choose your brand color */
+  background-color: #B9AEDC; /* Soft teal or choose your brand color */
   color: black;
   border: 2px solid black;
   border-radius: 5px;
