--- a/frontend/src/home.css
+++ b/frontend/src/home.css
@@ -101,7 +101,7 @@ body {
   
   .forgot-password-link a {
     font-size: 14px; /* Smaller font size */
-    color: black;
+    color: #a48ef6;
     font-weight: bold;
     text-decoration: none;
   }
@@ -118,6 +118,7 @@ body {
     border: none;
     color: white;
     font-size: 16px;
+    font-weight: bold;
     border-radius: 24px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -142,7 +143,7 @@ body {
   }
   
   .signup-link a {
-    color: black;
+    color: #a48ef6;
     font-weight: bold;
     text-decoration: none;
     font-weight: 600;
