--- a/frontend/src/LoginForm.css
+++ b/frontend/src/LoginForm.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif; 
-    background-color: white;
+    background-color: #cfbaea;
   }
   
   .login-container {
