--- a/frontend/src/profile.css
+++ b/frontend/src/profile.css
@@ -175,3 +175,22 @@ h2 {
     gap: 15px;
   }
 }
+
+.input-group {
+  display: flex;
+  align-items: center;
+}
+
+.input-group button {
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.input-group input {
+  width: 60px;
+  text-align: center;
+  margin: 0 10px;
+  padding: 5px;
+}
